--- a/app/src/main/res/layout/activity_tag_manager.xml
+++ b/app/src/main/res/layout/activity_tag_manager.xml
@@ -16,7 +16,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#85EFEFEF"
+            android:paddingBottom="10sp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -42,11 +44,13 @@
                 android:text="Distance: "
                 android:textSize="12sp"
                 android:layout_weight="1"/>
-            <Button
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DEL"
-                android:layout_weight="0.5" />
+                android:text="Delete: "
+                android:textSize="12sp"
+                android:layout_weight="1"/>
+
 
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
