--- a/app/src/main/res/layout/activity_tag_manager.xml
+++ b/app/src/main/res/layout/activity_tag_manager.xml
@@ -143,7 +143,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingBottom="15sp"
+            >
 
             <EditText
                 android:layout_width="wrap_content"
@@ -157,9 +159,41 @@
                 android:layout_height="wrap_content"
                 android:text="ADD"
                 android:id="@+id/addButton"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                />
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#85EFEFEF">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Most popular tags:"
+            android:textSize="12sp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Popularity:"
+            android:paddingRight="10sp"
+            android:textSize="12sp"
+            android:gravity="right"
+            android:layout_weight="1"
+            />
+        </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="300sp"
+            android:id="@+id/popularTagsRecyclerView"
+            android:background="#85EFEFEF"
+            />
+
     </LinearLayout>
+
+
+
 </ScrollView>
