--- a/app/src/main/res/layout/activity_users_profiles.xml
+++ b/app/src/main/res/layout/activity_users_profiles.xml
@@ -76,7 +76,9 @@
     </LinearLayout>
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="10sp"
+        android:layout_marginTop="10sp">
         <Button
             android:background = "@drawable/rounded_button"
             android:layout_width="match_parent"
@@ -89,7 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingTop="10sp"
+
             android:paddingBottom="10sp">
             <ImageView
                 android:id="@+id/dislikeButton"
