--- a/app/src/main/res/layout/activity_users_profiles.xml
+++ b/app/src/main/res/layout/activity_users_profiles.xml
@@ -28,7 +28,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:padding="10sp">
+            android:paddingBottom="10sp"
+            android:paddingRight="10sp"
+            android:paddingLeft="10sp"
+            android:paddingTop="5sp">
 
             <TextView
                 android:id="@+id/nameTextView"
@@ -38,30 +41,44 @@
                 android:textSize="30sp"
                 tools:text="name" />
 
-            <TextView
-                android:id="@+id/locationTextView"
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                tools:text="location" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/distanceTextView"
+                <ImageView
+                    android:id="@+id/locationimage"
+                    android:layout_width="20sp"
+                    android:layout_height="27sp"
+                    android:layout_marginRight="5sp"
+                    android:src="@drawable/user_profile_location" />
+                <TextView
+                    android:id="@+id/locationTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    tools:text="location" />
+                <TextView
+                    android:id="@+id/distanceTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp"
+                    tools:text="distance:" />
+
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                tools:text="distance:" />
-
-            <TextView
-                android:id="@+id/tagsTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                tools:text="Mutual tags" />
-
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/genderimage"
+                    android:layout_width="20sp"
+                    android:layout_height="27sp"
+                    android:layout_marginRight="5sp"
+                    android:src="@drawable/user_profile_gender" />
             <TextView
                 android:id="@+id/genderTextView"
                 android:layout_width="wrap_content"
@@ -69,7 +86,35 @@
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
                 tools:text="gender" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/tagsimage"
+                    android:layout_width="20sp"
+                    android:layout_height="27sp"
+                    android:layout_marginRight="5sp"
+                    android:src="@drawable/user_profile_tags" />
+
+                <TextView
+                android:id="@+id/tagsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                tools:text="Mutual tags" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10sp"
+                android:layout_marginBottom="10sp"
+                android:background="#EEEAEAEA" />
             <TextView
                 android:id="@+id/descriptionTextView"
                 android:layout_width="wrap_content"
