--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,194 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:paddingLeft="20sp"
-    android:paddingRight="20sp"
+
     android:scrollbars="none"
     tools:context="com.pinder.app.ui.SettingsFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:gravity="left"
-            android:paddingTop="20sp"
-            android:paddingBottom="10sp"
-            android:text="User settings:"
-            android:textSize="20sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Date of birth:"
-            android:textSize="12sp" />
-
-        <EditText
-            android:id="@+id/date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="DD/MM/YYYY"
-            android:inputType="date"
-            android:paddingTop="2sp" />
-
-        <Switch
-            android:id="@+id/mapLocationSwitch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
-            android:layout_marginBottom="10sp"
-            android:text="Show my location on map" />
-
-        <Switch
-            android:id="@+id/sortUsersByDistance"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
-            android:layout_marginBottom="10sp"
-            android:text="Sort users by distance" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:gravity="bottom"
-            android:orientation="vertical"
-            android:padding="10sp">
-
-            <Button
-                android:id="@+id/restartMatches"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center|bottom"
-                android:layout_marginBottom="10sp"
-                android:background="@drawable/rounded_button"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
-                android:text="Restart matches" />
-
-            <Button
-                android:id="@+id/moveUsersLocToGeoFire"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center|bottom"
-                android:layout_marginBottom="10sp"
-                android:background="@drawable/rounded_button"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
-                android:text="move Users Loc To GeoFire" />
-
-            <Button
-                android:id="@+id/logoutUser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|bottom"
-                android:layout_marginBottom="10sp"
-                android:background="@drawable/rounded_button"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
-                android:text="SignOut" />
-
-            <Button
-                android:id="@+id/deleteUser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|bottom"
-                android:layout_marginBottom="20sp"
-                android:background="@drawable/rounded_button"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
-                android:text="Delete account" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|bottom"
-                android:paddingBottom="5sp"
-                android:text="Want to report bug or advise improvement?" />
-
-            <Button
-                android:id="@+id/bugs_improvement"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|bottom"
-                android:layout_marginBottom="50sp"
-                android:background="@drawable/rounded_button"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
-                android:text="Bugs / Improvement" />
-        </LinearLayout>
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="bottom"
-            android:gravity="center|bottom"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/tags"
-                android:layout_width="100sp"
-                android:layout_height="100sp"
-                android:scaleX="1"
-                android:scaleY="1"
-                android:text="Tags"
-                app:srcCompat="@drawable/ic_logovector" />
+            android:orientation="vertical"
+            android:paddingLeft="20sp"
+            android:paddingRight="20sp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:gravity="left"
+                android:paddingTop="20sp"
+                android:paddingBottom="10sp"
+                android:text="User settings:"
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="top"
-                android:paddingBottom="20sp"
-                android:text="@string/version" />
+                android:text="Date of birth:"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="DD/MM/YYYY"
+                android:inputType="date"
+                android:paddingTop="2sp" />
+
+            <Switch
+                android:id="@+id/mapLocationSwitch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
+                android:layout_marginBottom="10sp"
+                android:text="Show my location on map" />
+
+            <Switch
+                android:id="@+id/sortUsersByDistance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
+                android:layout_marginBottom="10sp"
+                android:text="Sort users by distance" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_gravity="bottom"
+                android:gravity="bottom"
+                android:orientation="vertical"
+                android:padding="10sp">
 
                 <Button
-                    android:id="@+id/privacyPolicyButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5sp"
-                    android:background="@android:color/transparent"
+                    android:id="@+id/restartMatches"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center|bottom"
+                    android:layout_marginBottom="10sp"
+                    android:background="@drawable/rounded_button"
                     android:paddingLeft="10sp"
                     android:paddingRight="10sp"
-                    android:text="Privacy policy"
-                    android:textSize="12sp" />
+                    android:text="Restart matches" />
 
                 <Button
-                    android:id="@+id/termsButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5sp"
-                    android:background="@android:color/transparent"
+                    android:id="@+id/moveUsersLocToGeoFire"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center|bottom"
+                    android:layout_marginBottom="10sp"
+                    android:background="@drawable/rounded_button"
                     android:paddingLeft="10sp"
                     android:paddingRight="10sp"
-                    android:text="Terms &amp; Conditinons"
-                    android:textSize="12sp" />
+                    android:text="move Users Loc To GeoFire" />
 
                 <Button
-                    android:id="@+id/licenceButton"
+                    android:id="@+id/logoutUser"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center|bottom"
+                    android:layout_marginBottom="10sp"
+                    android:background="@drawable/rounded_button"
+                    android:paddingLeft="10sp"
+                    android:paddingRight="10sp"
+                    android:text="SignOut" />
+
+                <Button
+                    android:id="@+id/deleteUser"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center|bottom"
                     android:layout_marginBottom="20sp"
-                    android:background="@android:color/transparent"
+                    android:background="@drawable/rounded_button"
                     android:paddingLeft="10sp"
                     android:paddingRight="10sp"
-                    android:text="Licence"
-                    android:textSize="12sp" />
+                    android:text="Delete account" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center|bottom"
+                    android:paddingBottom="5sp"
+                    android:text="Want to report bug or advise improvement?" />
+
+                <Button
+                    android:id="@+id/bugs_improvement"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center|bottom"
+                    android:layout_marginBottom="50sp"
+                    android:background="@drawable/rounded_button"
+                    android:paddingLeft="10sp"
+                    android:paddingRight="10sp"
+                    android:text="Bugs / Improvement" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="bottom"
+                android:gravity="center|bottom"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/tags"
+                    android:layout_width="100sp"
+                    android:layout_height="100sp"
+                    android:scaleX="1"
+                    android:scaleY="1"
+                    android:text="Tags"
+                    app:srcCompat="@drawable/ic_logovector" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="top"
+                    android:paddingBottom="20sp"
+                    android:text="@string/version" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/privacyPolicyButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5sp"
+                        android:background="@android:color/transparent"
+                        android:paddingLeft="10sp"
+                        android:paddingRight="10sp"
+                        android:text="Privacy policy"
+                        android:textSize="12sp" />
+
+                    <Button
+                        android:id="@+id/termsButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5sp"
+                        android:background="@android:color/transparent"
+                        android:paddingLeft="10sp"
+                        android:paddingRight="10sp"
+                        android:text="Terms &amp; Conditinons"
+                        android:textSize="12sp" />
+
+                    <Button
+                        android:id="@+id/licenceButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20sp"
+                        android:background="@android:color/transparent"
+                        android:paddingLeft="10sp"
+                        android:paddingRight="10sp"
+                        android:text="Licence"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:paddingBottom="0dp"
+        android:scaleX="0.2"
+        android:scaleY="0.2"
+        android:visibility="gone" />
+</RelativeLayout>
