--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,8 +67,8 @@
                     android:layout_marginRight="6sp"
                     android:paddingLeft="10dp"
                     android:paddingRight="20dp"
-                    android:textColor="#ffffff"
-                    android:background="@drawable/login_email"
+                    android:textColor="#000000"
+                    android:background="@drawable/rounded_button"
                     android:drawableStart="@drawable/ic_login_mail"
                     android:drawableLeft="@drawable/ic_login_mail"
                     android:text="Continue with email" />
@@ -145,8 +145,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="40sp"
                     android:text="Continue with facebook"
-                    android:textColor="#ffffff"
-                    android:background="@drawable/login_facebook"
+                    android:textColor="#000000"
+                    android:background="@drawable/rounded_button"
                     android:drawableLeft="@drawable/ic_login_facebook_white"
                     android:drawableStart="@drawable/ic_login_facebook_white"
                     android:layout_marginTop="10sp"
@@ -161,13 +161,13 @@
                     android:id="@+id/continue_google"
                     android:layout_width="match_parent"
                     android:layout_height="40sp"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:paddingLeft="10dp"
                     android:paddingRight="20dp"
                     android:layout_marginBottom="10sp"
                     android:layout_marginLeft="6sp"
                     android:layout_marginRight="6sp"
-                    android:background="@drawable/login_google"
+                    android:background="@drawable/rounded_button"
                     android:text="Continue with Google"
                     android:drawableLeft="@drawable/ic_logo_google_white"
                     android:drawableStart="@drawable/ic_logo_google_white" />
@@ -191,9 +191,9 @@
                     android:layout_marginBottom="5sp"
                     android:layout_marginLeft="6sp"
                     android:layout_marginRight="6sp"
-                    android:background="@drawable/login_phone"
+                    android:background="@drawable/rounded_button"
                     android:text="Continue with phone"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:drawableLeft="@drawable/ic_login_phone"
                     android:drawableStart="@drawable/ic_login_phone" />
 
