--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -59,18 +59,7 @@
             </LinearLayout>
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/mainTagsRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="45sp"
-                android:orientation="horizontal"
-                tools:listitem="@layout/item_tags" />
-        </RelativeLayout>
 
 
         <RelativeLayout
@@ -103,18 +92,11 @@
                 android:id="@+id/frame"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
+                android:layout_gravity="top"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
                 app:rotation_degrees="15.5"
                 tools:context=".MyActivity" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/relative_layout_tags"
-            android:layout_width="match_parent"
-            android:layout_height="45sp"
-            android:orientation="horizontal">
         </RelativeLayout>
 
         <RelativeLayout
